# read-pilot

./: .env.example  .gitignore  AI_PROVIDER_GUIDE.md  AI_SUMMARY_GUIDE.md  API_RESPONSE_STANDARD.md  CLAUDE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  PARLANT_AGENT_STRUCTURE.md  POSTGRESQL_QUICKSTART.md  POSTGRESQL_SETUP_GUIDE.md  PROJECT_SUMMARY.md  README.md  SETUP_POSTGRESQL.md  SUMMARY_DATA_FLOW.md  Spec_Kit_实战入门指南.md  docker-compose.yml  setup.sh  setup_postgresql.sh
.specify/: HOW_TO_USE.md
.specify/memory/: constitution.md
.specify/specs/001-core-reading-experience/: cost-optimization.md  phase1-checklist.md  plan.md  spec.md  tasks.md
backend/: .env.example  CELERY_GUIDE.md  CLEANUP_SUMMARY.md  COMMANDS.md  DATABASE_COMPARISON.md  ENV_GUIDE.md  Makefile  README.md  SETUP.md  alembic.ini  config.py  diagnose.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  scripts.py  start_celery.sh  test_summary.py  test_summary_direct.py  test_summary_full.py
backend/agents/: __init__.py  coordinator.py  note_builder.py  qa.py  quiz_generator.py  summarizer.py
backend/alembic/: README  env.py
backend/alembic/versions/: b19feaaf714e_initial_migration.py  f061f64254c3_add_summary_table.py
backend/api/: __init__.py  chat.py  documents.py  users.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  auth.py  documents.py
backend/app/core/: cache.py  config.py  deps.py  embedding_generator.py  exceptions.py  security.py  text_chunker.py  vector_db.py
backend/app/core/ai/: __init__.py  anthropic_service.py  base.py  openai_service.py  qwen_service.py
backend/app/core/document_parser/: __init__.py  base.py  docx_parser.py  epub_parser.py  pdf_parser.py  text_parser.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  ai_summary.py  annotation.py  base.py  chat_message.py  chat_session.py  document.py  document_chunk.py  message.py  reading_session.py  user.py
backend/app/schemas/: auth.py  document.py  response.py  user.py
backend/app/services/: ai_service.py  auth_service.py  document_service.py  summary_service.py
backend/app/tasks/: celery_app.py  document_processing.py  embedding_tasks.py
backend/app/tests/: test_main.py
backend/app/utils/: file_handler.py  file_storage.py  file_validation.py  logger.py
backend/data/documents/1f783a49-2817-4274-ad25-ecbb9f5ae0be/: fd73b850-d871-4e93-b21c-f4e583489339.docx
backend/models/: __init__.py  base.py  document.py  session.py  user.py
backend/scripts/: init_db.py  init_db_simple.py  init_schema.sql  test_setup.py
backend/services/: __init__.py  agent_service.py  database_service.py  vector_service.py
backend/tools/: __init__.py  context_tools.py  document_tools.py  llm_tools.py  vector_tools.py
docs/: POSTGRESQL_README.md
frontend/: .eslintignore  .prettierignore  SETUP.md  package.json  pnpm-lock.yaml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/components/document/: DocumentCard.tsx  DocumentList.tsx  DocumentUploader.tsx  LoadingSummary.tsx  ProcessingStatusBadge.tsx  SummaryControls.tsx  (+1 more)
frontend/src/stores/: authStore.ts  documentStore.ts
frontend/src/types/: api.ts  document.ts
specs/001-core-reading-experience/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-core-reading-experience/checklists/: api-standardization.md  comprehensive-requirements-quality.md  requirements.md
specs/001-core-reading-experience/contracts/: README.md  openapi.yaml
(+10 files in other folders)
